...
        appBar: AppBar(
          title: Text(
            context.watch<ListDetailsBloc>().state.shoppingList?.title ?? '',
          ),
          actions: [
            IconButton(
              key: const Key('delete'),
              onPressed: () async => !_hasErrors() ? _showDeleteDialog() : null,
              icon: const Icon(Icons.delete),
              splashRadius: 24,
              tooltip: 'Delete List',
            )
          ],
...
