...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('New list'),
        actions: [
          IconButton(
            key: const Key('save'),
            onPressed: () => context
                .read<CreateListBloc>()
                .add(const CreateListEvent.saveList()),
            tooltip: 'Save',
            splashRadius: 24.0,
            icon: const Icon(Icons.check),
...
